Implemented register and login